--- a/less/index.less
+++ b/less/index.less
@@ -55,5 +55,158 @@ table {
 
 html, body {
     height: 100%;
+    font-size:67%;
+    font-family: 'Indie Flower', cursive;
+   
+}
+body{
+	background-image: url(/images/white.jpg)
 }
 
+.container{
+	width: 90%;
+	font-size:1.5rem;
+	padding:3%;
+	margin:0 auto;
+	
+
+	
+	nav{
+		display:flex;
+		justify-content: flex-end;
+		
+		
+		
+		a{
+			display: flex;
+			justify-content: space-between;
+			font-size: 2rem;
+			color: rgb(16, 59, 124);
+			text-decoration: none;
+			margin-right:3%;
+			font-weight:bold;
+			
+		a:hover{
+			color:rgb(137, 137, 214);
+			font-size: 2.4rem;
+		}
+	}
+@media only screen and (max-width: 500px) {
+  a {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+}
+header{
+	background-color: rgb(208, 214, 218);
+	opacity: 0.8;
+	margin-top:2%;
+	img{
+		width: 30%;
+		margin-left:10% ;
+		margin-top:3%;
+		margin-bottom: 3%
+	}
+	h2{
+		font-size:4.0rem;
+		margin-left:10%;
+		margin-bottom: 1%;
+	}
+	p{
+		margin-left:10%;
+	}
+	.headerText1{
+		margin-bottom: 5%;
+		
+	}
+	.headerText2{
+		button{
+			margin:5% 10%;
+			padding:.9%;
+			color:wheat;
+			background-color: rgb(141, 171, 228);
+		}
+		button:hover{
+			//  padding:1.5%;
+			color:black;
+			background-color: rgb(164, 165, 170);
+			opacity: .6;
+			font-size: 1.4rem;
+		}
+		
+	}
+
+}
+.main{
+	display:flex;
+	justify-content:space-between;
+	@media only screen and (max-width: 500px) {
+		display: flex;
+		flex-direction: column;
+		width:80%;
+		margin: 0 auto;
+		margin-left: 30%;
+		
+	    }
+}
+
+
+.mainText{
+	margin-top:5%;
+	width:47%;
+	p{
+		margin-top:1%;
+		font-size:2.0rem;
+	}
+	h3{
+		font-size: 4rem;
+	}
+
+}
+
+.mainList{
+	width: 47%;
+	margin-top:7%;
+	h3{
+		font-size: 2.6rem;
+		margin-bottom: 8%;
+	}
+	ul{
+		margin-left:6%;
+		margin-top:2%;
+		line-height: 3rem;
+		
+	}
+	li{
+		font-size: 1.8rem;
+		list-style-type:circle;
+		text-decoration:underline rgb(139, 147, 184);
+	}
+
+}
+
+		
+footer{
+	background-color: rgb(208, 214, 218);
+	
+	margin-bottom: 0px;
+	font-size: 2.5rem;
+	margin-top:10%;
+	h4{
+		font-size: 3rem;
+		text-align: center;
+		margin-bottom: 5%
+	}
+
+
+	
+}
+		
+h5{
+	margin-top: 6%;
+	font-size: 2rem;
+	text-align: center;
+}		
+}
