--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,261 @@
-/* Compile your LESS file! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+/* Set every element's box-sizing to border-box */
+* {
+  box-sizing: border-box;
+}
+html,
+body {
+  height: 100%;
+  font-size: 67%;
+}
+body {
+  background-image: url(/images/white.jpg);
+}
+.container {
+  width: 90%;
+  font-size: 1.5rem;
+  padding: 3%;
+  margin: 0 auto;
+}
+.container nav {
+  display: flex;
+  justify-content: flex-end;
+}
+.container nav a {
+  display: flex;
+  justify-content: space-between;
+  font-size: 2rem;
+  color: #103b7c;
+  text-decoration: none;
+  margin-right: 3%;
+  font-weight: bold;
+}
+.container nav a:hover {
+  color: #8989d6;
+  font-size: 2.4rem;
+}
+@media only screen and (max-width: 500px) {
+  .container a {
+    display: flex;
+    flex-direction: column;
+  }
+}
+header {
+  background-color: #d0d6da;
+  opacity: 0.8;
+  margin-top: 2%;
+}
+header img {
+  width: 30%;
+  margin-left: 10% ;
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+header h2 {
+  font-size: 4rem;
+  margin-left: 10%;
+  margin-bottom: 1%;
+}
+header p {
+  margin-left: 10%;
+}
+header .headerText1 {
+  margin-bottom: 5%;
+}
+header .headerText2 button {
+  margin: 5% 10%;
+  padding: 0.9%;
+  color: wheat;
+  background-color: #8dabe4;
+}
+header .headerText2 button:hover {
+  color: black;
+  background-color: #a4a5aa;
+  opacity: 0.6;
+  font-size: 1.4rem;
+}
+.main {
+  display: flex;
+  justify-content: space-between;
+}
+@media only screen and (max-width: 500px) {
+  .main {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin: 0 auto;
+    margin-left: 30%;
+  }
+}
+.mainText {
+  margin-top: 5%;
+  width: 47%;
+}
+.mainText p {
+  margin-top: 1%;
+  font-size: 2rem;
+}
+.mainText h3 {
+  font-size: 4rem;
+}
+.mainList {
+  width: 47%;
+  margin-top: 7%;
+}
+.mainList h3 {
+  font-size: 2.6rem;
+  margin-bottom: 8%;
+}
+.mainList ul {
+  margin-left: 6%;
+  margin-top: 2%;
+  line-height: 3rem;
+}
+.mainList li {
+  font-size: 1.8rem;
+  list-style-type: circle;
+  text-decoration: underline #8b93b8;
+}
+footer {
+  background-color: #d0d6da;
+  margin-bottom: 0px;
+  font-size: 2.5rem;
+  margin-top: 10%;
+}
+footer h4 {
+  font-size: 3rem;
+  text-align: center;
+  margin-bottom: 5%;
+}
+h5 {
+  margin-top: 6%;
+  font-size: 2rem;
+  text-align: center;
+}
